hphp/hack/test/typecheck/fc_enum_non_arraykey_constraint.php.exp
File "fc_enum_non_arraykey_constraint.php", line 4, characters 6-9:
Enums must be `int` or `string` or `arraykey`, not `?string` (Typing[4024])
